Code hygiene on PL/Java examples